--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 h1 {
     font-family: "Jost", sans-serif;
-    font-size: 80px;
-    padding-bottom: 200px;
+    font-size: 70px;
+    padding-bottom: 100px;
+    text-align: right;
 }
 
 
 h2 {
     padding-left: 0px;
     font-family: "Jost", sans-serif;
+    text-align: center;
+    font-size: 30px;
 }
 
 body {
@@ -16,6 +19,8 @@ body {
 
 p {
     font-family: "Rubik", sans-serif;
+    text-align: center;
+    font-size: 20px;
 }
 
 nav {
@@ -29,6 +34,9 @@ nav ul {
     padding: 0;
     overflow: hidden;
     background-color: aliceblue;
+    top: 0;
+    width: 100%;
+    position: fixed;
 }
 
 nav li {
@@ -67,10 +75,39 @@ html {
 }
 
 section {
-    padding: 20px;
+    padding: 50px;
 }
 
+#education {
+    background-color:#D0E0EA;
+    padding-bottom: 100px;
+    padding-top:50px;
+}
 
-#about {
-    background-color: aliceblue;
+#projects {
+    padding-bottom: 100px;
+    padding-top: 50px;
+}
+
+.me {
+    padding: 50px;
+}
+
+.csulb {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%
+}
+
+div.coursescontainer{
+    font-family: "Jost", sans-serif;
+    text-align: center;
+    
+}
+
+ul.courses {
+    display: inline-block;
+    text-align: left;
+    margin-top:0;
 }
