--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ h1 {
     font-family: "Jost", sans-serif;
     font-size: 70px;
     padding-bottom: 100px;
-    text-align: right;
 }
 
 
@@ -89,9 +88,24 @@ section {
     padding-top: 50px;
 }
 
-.me {
-    padding: 50px;
+
+div.topcontainer {
+    display: flex;
+    flex-wrap: wrap;
 }
+
+div.meimage {
+    flex: 10;
+    padding-top: 50px;
+    padding-left: 100px;
+}
+
+div.metext {
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-right: 100px;
+}
+
 
 .csulb {
     display: block;
