--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-
-
-
 h2 {
     padding-left: 0px;
     font-family: "Jost", sans-serif;
@@ -17,6 +14,8 @@ p {
     text-align: center;
     font-size: 20px;
 }
+
+/* Navigation Bar */
 
 nav {
     overflow: hidden;
@@ -72,14 +71,16 @@ section {
     padding: 50px;
 }
 
+/* Sections */
 #home {
-    padding-bottom: 200px;
+    padding-bottom: 100px;
+    background-color:#A9CBD5;
 }
 
 #education {
-    background-color:#D0E0EA;
     padding-bottom: 100px;
     padding-top:50px;
+
 }
 
 #projects {
@@ -89,6 +90,7 @@ section {
 
 #contact {
     padding-bottom: 100px;
+    background-color: lightgray;
 }
 
 div.topcontainer {
@@ -103,37 +105,27 @@ div.meimage {
     padding-bottom: 100px;
 }
 
-.me {
+.name-text {
+    animation: fadeIn ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+/* Fadein animation */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.meimage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 50%;
-}
-
-div.metext {
-    padding-left: 50px;
-    display: inline-block;
-}
-
-.anitext {
-    font-family: "Jost", sans-serif;
-    font-size: 70px;
-    margin-bottom: 100px;
-    margin-right: 200px;
-    margin-top: 250px; 
-    border-right: 5px solid;
-    white-space: nowrap;
-    overflow: hidden;
-    animation:
-        typing 2.6s steps(40, end),
-        cursor .5s step-end infinite;
-}
-
-@keyframes cursor {
-    from, to {border-color: transparent}
-    50% {border-color: black}
-}
-
-@keyframes typing {
-    from {width: 0}
-    to {width: 70%}
 }
 
 .csulb {
@@ -154,3 +146,15 @@ ul.courses {
     text-align: left;
     margin-top:0;
 }
+
+.logoscontainer {
+    text-align: center;
+}
+
+.logoscontainer img {
+    display: inline-block;
+    margin: 5px;
+    vertical-align: middle;
+}
+
+
