--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,8 @@ div.me-image {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    height: 500px;
+    width: 400px;
     box-shadow: -15px 15px #1a7fa1;
     margin-top: 80px;
     width:380px;
@@ -208,7 +210,7 @@ button {
 }
 
 .button-container {
-    margin-top: 630px;
+    margin-top: 610px;
     text-align: center; 
 }
 
