--- a/styles.css
+++ b/styles.css
@@ -165,34 +165,28 @@ div.me-image {
 }
 
 .computer-image {
-    height: 170px;
+    height: 200px;
     width: 220px;
     display: block;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
-.histogram-image {
-    height: 200px;
-    width: 250px;
+.fact-gen-image {
+    height: 220px;
+    width: 220px;
     display: block;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
 }
 
-.cards-image {
-    height: 200px;
-    width: 250px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.logoscontainer img {
-    display: inline-block;
-    margin: 5px;
-    vertical-align: middle;
-}
 
 /* Scroll Down Button */
 button {
@@ -239,12 +233,6 @@ button {
     width: 50%;
     padding: 10px;
 }
-  
-.projects-column {
-    float: left;
-    width: 33.33%;
-    padding: 10px;
-}
 
 .education-row:after, .projects-row:after {
     content: "";
@@ -275,26 +263,55 @@ ul.list {
     padding: 0;
 }
 
-.projects-container {
-    text-align: center;
-    margin: auto;
-    border: solid 5px lavender;
-    border-radius: 15px;
-    box-sizing: border-box;
-    padding: 5px;
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
 }
 
-.projects-container:hover {
-    background-color: #F0EDF2;
+.grid-item {
+    background-color: white;
+    border: 5px solid lavender;
+    border-radius: 15px;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    justify-content: center;
+    height: 350px;
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: lavender;
+}
+
+.grid-item:hover .overlay{
+    opacity: 1;
 }
 
 .projects-text {
     max-width: 300px;
     margin: auto;
-    padding: 50px;
+    padding: 20px;
     box-sizing: border-box;
     font-family: Jost;
-    font-size:15px;
+    font-size: 17px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* Contact Me */
@@ -328,12 +345,12 @@ ul.list {
 /* Repo Links Decoration */
 .repo-text{
     text-decoration: none;
-    color: rgb(172, 98, 172);
+    color: gray;
     transition: color 0.2s ease;
 }
 
 .repo-text:hover {
-    color: gray;
+    color: rgb(172, 98, 172);
 }
 
 
@@ -400,7 +417,6 @@ ul.list {
 
     .intro-column,
     .education-column,
-    .projects-column,
     .second-column {
         width: 100%;
         padding: 8px;
