--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ div.me-image {
 }
 
 .computer-image {
-    height: 200px;
+    height: 220px;
     width: 220px;
     display: block;
     margin-top: 30px;
@@ -206,6 +206,17 @@ div.me-image {
     border-radius: 15px;
 }
 
+.youtube-image {
+    height: 220px;
+    width: 220px;
+    display: block;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
+}
 
 /* Scroll Down Button */
 button {
@@ -282,8 +293,7 @@ ul.list {
     padding: 0;
 }
 
-
-
+/* Projects Grid */
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
