--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,18 @@ div.me-image {
     border-radius: 15px;
 }
 
+.journaling-image {
+    height: 220px;
+    width: 220px;
+    display: block;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
+}
+
 /* Scroll Down Button */
 button {
     background-color: #A9CBD5;
