--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ div.me-image {
     max-height: 100%;
 }
 
-.fact-gen-image {
+.books-image {
     height: 220px;
     width: 220px;
     display: block;
@@ -208,12 +208,11 @@ div.me-image {
     margin-right: auto;
     max-width: 100%;
     max-height: 100%;
-    border-radius: 15px;
 }
 
-.youtube-image {
-    height: 220px;
-    width: 220px;
+.rain-image {
+    height: 190px;
+    width: 190px;
     display: block;
     margin-top: 30px;
     margin-left: auto;
@@ -366,11 +365,12 @@ ul.list {
 .repo-text{
     text-decoration: none;
     color: gray;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease, text-decoration 0.3 ease;
 }
 
 .repo-text:hover {
     color: #5c92a4;
+    text-decoration: underline;
 }
 
 /* Contact Me Section*/
